RELEASE 1.14 - fix spacing

--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ nav .links li a:hover i {
 .firstproject, .secondproject, .thirdproject, .fourthproject {
     width: 80%;
     margin-left: 10%;
-    height: 50vh;
+    height: fit-content;
     background-color: var(--background-200);
     padding: 1vw;
     border-radius: 25px;
